# HELICS

./: .cirrus.yml  .clang-format  .clang-tidy  .cmake-format.json  .codacy.yml  .codecov.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierrc  .readthedocs.yaml  .travis.yml  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  CPPLINT.cfg  Contributors.md  DISCLAIMER  Dockerfile-Octave  Doxyfile.in  HELICS.ipynb  HELICSConfig.cmake.in  HELICSImport.cmake.in  LICENSE  NOTICE  README.md  README.md~RF5902c499.TMP  ROADMAP.md  RoadMap.md  SECURITY.md  appveyor.yml  code-of-conduct.md  config.h.in  git-all-archive.py  git-all-archive.sh  helics-config.h.in  (+6 more)
benchmarks/: .clang-tidy  CMakeLists.txt
benchmarks/helics/: ActionMessageBenchmarks.cpp  BarabasiAlbertFederate.hpp  BenchmarkFederate.hpp  BenchmarkMain.cpp  CMakeLists.txt  EchoHubFederate.hpp  EchoHubFederateMain.cpp  EchoLeafFederate.hpp  EchoLeafFederateMain.cpp  EchoMessage.hpp  EchoMessageHubFederate.hpp  EchoMessageHubFederateMain.cpp  EchoMessageLeafFederate.hpp  EchoMessageLeafFederateMain.cpp  MessageExchangeFederate.hpp  MessageExchangeFederateMain.cpp  PholdFederate.hpp  PholdFederateMain.cpp  RingTransmitFederate.hpp  RingTransmitFederateMain.cpp  RingTransmitMessageFederate.hpp  RingTransmitMessageFederateMain.cpp  TcpFederate.cpp  TimingHubFederate.hpp  TimingHubFederateMain.cpp  TimingLeafFederate.hpp  TimingLeafFederateMain.cpp  WattsStrogatzFederate.hpp  barabasiAlbertBenchmarks.cpp  conversionBenchmarks.cpp  echoBenchmarks.cpp  echoBenchmarks_c.cpp  echoBenchmarks_py.py  echoMessageBenchmarks.cpp  filterBenchmarks.cpp  helics_benchmark_main.h  helics_benchmark_util.h  messageLookupBenchmarks.cpp  messageSendBenchmarks.cpp  pholdBenchmarks.cpp  (+6 more)
examples/: CMakeLists.txt  README.md  example1.recorder
examples/BrokerServerTestCase/: CMakeLists.txt  brokerServerTest.cpp
examples/CInterface/: CMakeLists.txt  nonlings_fed1.c  nonlings_fed2.c  pi_receiver.c  pi_receiver2.c  pi_sender.c  pi_sender2.c  run_nonlings.sh  run_pi.sh  run_pi2.sh
examples/CppInterface/: .clang-tidy  CMakeLists.txt  nonlings_fed1.cpp  nonlings_fed2.cpp  pi_receiver.cpp  pi_receiver2.cpp  pi_sender.cpp  pi_sender2.cpp
examples/ElectricFed/: CMakeLists.txt  ElectricFed.cpp
examples/FilterFederate1/: CMakeLists.txt  FilterFed.cpp  run3.sh
examples/GasFed/: CMakeLists.txt  GasFed.cpp
examples/InteropExample/: CMakeLists.txt  InterOpFed1.cpp  InterOpFed2.cpp
examples/comboFederates1/: CMakeLists.txt  comboFed.cpp  openmpi-run.conf  run.sh  run1.sh  run2.sh  run3.sh  srun-mpi.conf
examples/comboFederates_cpp_shared/: CMakeLists.txt  comboFed.cpp  openmpi-run.conf  run.sh  run3.sh  srun-mpi.conf
examples/cython/: CMakeLists.txt  Makefile  README.md  federate.pxd  helics.pyx  identifierTypes.pxd  message.pxd  setup.py.in  test1.py  test2.py  valuefederate.pxd  worker.py
examples/example_files/: Control_test.json  example_combo_fed.json  example_combo_fed.toml  example_connections1.json  example_filters.json  example_filters.toml  example_globals1.json  example_message_fed.json  example_message_fed.toml  example_value_fed.json  example_value_fed.toml
examples/ipcTest/: CMakeLists.txt  common.hpp  ipcTest1.cpp  ipcTest2.cpp
examples/memoryExample/: CMakeLists.txt  federateEndpointConfig.json  federatePubSubConfig.json  helicsCppFederate.cpp
examples/messageFederates1/: CMakeLists.txt  messageFed.cpp  messageFedObj.cpp  openmpi-run.conf  run.sh  run3.sh  srun-mpi.conf
examples/valueFederates1/: CMakeLists.txt  run.bat  run.sh  valueFed.cpp
interfaces/: CMakeLists.txt  Makefile  README.md  helics.i  output.i
interfaces/csharp/: CMakeLists.txt  csharp_maps.i  helicsCsharp.i
interfaces/java/: CMakeLists.txt  MakeJarCMakeLists.txt.in  addLoadLibraryCommand.cmake  helicsJava.i  javaSwigGenerateOnly.cmake  java_maps.i  overwriteJavaFiles.cmake
interfaces/matlab/: CMakeLists.txt  GetFullPath.m  README.md  generateMEXcreationScript.cmake  generatehelicsMEXFile.m.in  helicsMEX.cpp  helicsMatlab.i  helicsStartup.m  matlabSwigGenerateOnly.cmake  matlab_maps.i  mkhelicsMEXFile.m  mkhelicsMEXFile.m.in  overwriteMatlabFiles.cmake
interfaces/octave/: CMakeLists.txt  README.md  generateOCTcreationScript.cmake  helicsOCTAVE_wrap.cpp  helicsOctave.i  mkhelicsOCTFile.m.in  modifyOctSourceFile.cmake  octave_maps.i  pisender.m
interfaces/python/: CMakeLists.txt  README.md  addHelicsPy3Lib.cmake  helics.py  helicsPython.c  helicsPython.i  helicsPython2.i  helicsPython3.i  helics_wrap.c  overwritePythonFiles.cmake  pythonSwigGenerateOnly.cmake  python_maps.i  python_maps2.i  python_maps3.i  setup.py.in
interfaces/python2/: CMakeLists.txt  README.md  helicsPython2.i  python_maps2.i
src/: CMakeLists.txt  empty.cpp
src/docs/: c_api_referece.dox  c_api_reference.dox  extra_doxygen_style.css  mainpage.dox
src/helics/: CMakeLists.txt  MessageFederates.hpp  ValueFederates.hpp  application_api.hpp  chelics.h  config.h.in  flag-definitions.h  helics.hpp  helics98.hpp  helics_apps.hpp  helics_enums.h
src/old/: logger.h  loggerCore.hpp
swig/: CMakeLists.txt  Makefile  README.md  helics.i  helics_wrap.cxx  output.i  pireceiver.py  pireciever.py  pisender.py
swig/java/: CMakeLists.txt  SWIGTYPE_p_double.java  SWIGTYPE_p_federate_state.java  SWIGTYPE_p_helics_iteration_status.java  SWIGTYPE_p_int.java  SWIGTYPE_p_int64_t.java  SWIGTYPE_p_p_char.java  SWIGTYPE_p_void.java  addLoadLibraryCommand.cmake  data_t.java  federate_state.java  helics.java  helicsConstants.java  helicsJNI.java  helicsJava.i  helics_filter_type_t.java  helics_iteration_request.java  helics_iteration_status.java  helics_status.java  helics_wrap.c  java_maps.i  message_t.java
swig/matlab/: CMakeLists.txt  GetFullPath.m  README.md  SwigRef.m  generateMEXcreationScript.cmake  generatehelicsMEXFile.m  helicsDestroyFederate.m  helicsEndFederate.m  helicsMEX.cpp  helicsMEX.cxx  helicsMatlab.i  helicsStartup.m  helics_wrap.cxx  matlab_maps.i  pireceiver.m  (+3 more)
tests/: .clang-tidy  CMakeLists.txt  CPPLINT.cfg
(+3597 files in other folders)
